# ai-progremming-challenge

./: README.md
MarkView/: .gitignore  README.md  code.md  index.html  package-lock.json  package.json  tsconfig.json  vitest.config.ts
MarkView/.storybook/: main.ts
MarkView/src/: App.stories.tsx  App.test.tsx  App.tsx  index.css
MarkView/src/test/: README.md
MarkView/src/utils/: markdown.test.ts
MoodLogs/: .gitignore  README.md  code.md  package-lock.json  package.json
MoodLogs/.github/: copilot-instructions.md
MoodLogs/src/: App.css  App.jsx
image-resizer-app/: .gitignore  Makefile  README.md  code.md  main.py  pyproject.toml  requirements.txt  run_tests.py
image-resizer-app/controllers/: __init__.py  app_controller.py
image-resizer-app/models/: __init__.py  image_processor.py  settings.py
image-resizer-app/tests/: __init__.py  test_file_utils.py  test_image_processor.py  test_settings.py
image-resizer-app/utils/: __init__.py  file_utils.py
image-resizer-app/views/: __init__.py  main_window.py
img_resizer/: README.md  main.py
jsonify/: Makefile  README.md  code.md  go.mod  go.sum  main.go
jsonify/cmd/: format.go  format_test.go  root.go  root_test.go  schema.go  schema_test.go  validate.go  validate_test.go
jsonify/examples/: invalid-data.json  invalid.json  person-schema.json  sample.json
regrep/: Makefile  README.md  code.md  go.mod  main.go  main_test.go  test.txt
